# apyb-bot

./: .gitignore  README.md  pyproject.toml
apyb/: cli.py  config.py  email.py  templates.py
apyb/github/: __init__.py  client.py
apyb/github/commands/: new_discussion_notification.py
apyb/templates/: email_new_discussion.html
