[tool.poetry]
name = "apyb-bot"
version = "0.1.0"
description = ""
authors = ["Marco Rougeth <rougeth@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "apyb"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.23.3"
click = "^8.1.3"
pygithub = "^1.58.1"
loguru = "^0.6.0"
gql = {version = "3.5.0b3", extras = ["httpx"]}

[tool.poetry.scripts]
apyb-bot = "apyb.cli:cli"

[tool.poetry.group.dev.dependencies]
ipython = "^8.11.0"
ipdb = "^0.13.13"
isort = "^5.12.0"
pudb = "^2022.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"